--- a/css/main.css
+++ b/css/main.css
@@ -2063,7 +2063,7 @@ color: black;
     background-color: #0056b3;
 }
 
-.popup {
+.modal {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -2075,7 +2075,7 @@ color: black;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.popup-content {
+.modal-content {
     background-color: #fff;
     margin: 15% auto;
     padding: 20px;
@@ -2093,17 +2093,17 @@ color: black;
     color: #4CAF50;
 }
 
-.popup-content h2 {
+.modal-content h2 {
     margin: 10px 0;
     font-size: 24px;
 }
 
-.popup-content p {
+.modal-content p {
     font-size: 16px;
     color: #333;
 }
 
-.popup-content button {
+.modal-content button {
     background-color: #007bff;
     color: white;
     border: none;
@@ -2113,11 +2113,11 @@ color: black;
     font-size: 16px;
 }
 
-.popup-content button:hover {
+.modal-content button:hover {
     background-color: #0056b3;
 }
 
-.popup-close {
+.close-button {
     position: absolute;
     top: 10px;
     right: 25px;
@@ -2127,8 +2127,8 @@ color: black;
     cursor: pointer;
 }
 
-.popup-close:hover,
-.popup-close:focus {
+.close-button:hover,
+.close-button:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
