--- a/css/main.css
+++ b/css/main.css
@@ -2064,13 +2064,13 @@ color: black;
 }
 
 .modal {
-    display: none;
+    display: block;
     position: fixed;
     z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    /* height: 500px; */
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
 }
@@ -2082,6 +2082,7 @@ color: black;
     border: 1px solid #888;
     width: 80%;
     max-width: 500px;
+    max-height: 230px;
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
