--- a/css/responsive.css
+++ b/css/responsive.css
@@ -558,6 +558,13 @@
     .places, .time1 {
         font-size: 13px;
     }
+    /* about page */
+    .doctor-image2{
+        width: 30%;
+    }
+    .doctor-info2{
+        width: 60%;
+    }
 }
 @media screen and (min-width: 1024px) and (max-width: 1221px) {
     .op-navbar li a {
