--- a/css/responsive.css
+++ b/css/responsive.css
@@ -565,6 +565,7 @@
     .doctor-info2{
         width: 60%;
     }
+    
 }
 @media screen and (min-width: 1024px) and (max-width: 1221px) {
     .op-navbar li a {
@@ -579,5 +580,8 @@
     }
     .places, .time1 {
         font-size: 16px;
+    }
+    .contact-form-info{
+        height: 565px;
     }
 }
