--- a/css/responsive.css
+++ b/css/responsive.css
@@ -576,7 +576,7 @@
     .info-item{
         padding: 1px 9px;
     }
-    .about-section{
+    .about-section-md{
         display: flex;
         flex-direction: column;
     }
@@ -601,7 +601,7 @@
     .info-item{
         padding: 1px 9px;
     }
-    .about-section{
+    .about-section-md{
         display: flex;
         flex-direction: column;
     }
