--- a/css/responsive.css
+++ b/css/responsive.css
@@ -585,10 +585,10 @@
     }
 
                                                         /* our services */
-    .unique-ourservice-section{
+    /* .unique-ourservice-section{
         flex-direction: column;
         align-items: center;
-        padding: 0 10px; /* Add padding for margins */
+        padding: 0 10px;
     }
     .unique-ourservice-row {
         flex-direction: column;
@@ -596,7 +596,7 @@
     }
     .unique-ourservice-col {
         width: 100%;
-        padding: 10px 15px; /* Add padding for margins */
+        padding: 10px 15px; 
     }
     .unique-img-section {
         width: 100%;
@@ -604,19 +604,19 @@
     .unique-ourservice-sidebar {
         width: 100%;
         margin-top: 20px;
-        padding: 0 15px; /* Add padding for margins */
+        padding: 0 15px; 
     }
     .unique-ourservice-container {
         width: 100%;
         left: 0;
         bottom: 0;
         margin-top: 20px;
-        padding: 0 15px; /* Add padding for margins */
+        padding: 0 15px; 
     }
     .unique-ourservice-col2 {
         width: 100%;
         position: static;
-    }
+    } */
 }
 @media screen and (min-width: 1024px) and (max-width: 1221px) {
     .op-navbar li a {
@@ -656,6 +656,9 @@
         flex-direction: column;
         align-items: center;
     }
+    .unique-ourservice-col p{
+      font-size: 1rem;
+    }
     .unique-ourservice-col {
         width: 100%;
         padding: 10px 15px; /* Add padding for margins */
@@ -666,32 +669,37 @@
     .unique-ourservice-sidebar {
         width: 100%;
         margin-top: 20px;
-        padding: 0 15px; /* Add padding for margins */
+        padding: 20px 7px; /* Add padding for margins */
     }
     .unique-ourservice-container {
         width: 100%;
-        left: 0;
+        left: 15px;
         bottom: 0;
         margin-top: 20px;
         padding: 0 15px; /* Add padding for margins */
     }
     .unique-ourservice-col2 {
         width: 100%;
-        position: static;
+        position: relative;
+        top: 0px;
+        right: 15px;
     }
 }
 @media only screen and (max-width: 480px) {
     .unique-ourservice-col h4 {
-        font-size: 1.2rem;
+        font-size: 1.6rem;
     }
     .unique-ourservice-container .unique-contact-text {
-        font-size: 16px;
+        font-size: 1.5rem;
     }
     .unique-ourservice-container .unique-phone-number {
-        font-size: 20px;
+        font-size: 1.5rem;
+    }
+    .unique-ourservice-col p{
+      font-size: 1rem;
     }
     .unique-ourservice-container .unique-email {
-        font-size: 16px;
+        font-size: 1.2rem;
     }
     .unique-ourservice-section,
     .unique-ourservice-row,
