--- a/css/main.css
+++ b/css/main.css
@@ -2313,7 +2313,7 @@ color: black;
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5), 
         rgba(0, 0, 0, 0.5)
-    ), url("/image/knee.jpeg");
+    ), url("image/knee.jpeg");
     background-size: cover;
     background-position: center;
     position: relative;
