--- a/css/main.css
+++ b/css/main.css
@@ -1430,13 +1430,10 @@ text-align: left;
 
 /* static banner style */
 .banner {
-    background-color: #333;
+    /* background-color: #333; */
     color: #fff;
     padding: 50px 0;
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5), 
-        rgba(0, 0, 0, 0.5)
-    ), url("image/images-that-simulate-x-rays-with-neon-colors.jpg");
+    background-image: url("../image/images-that-simulate-x-rays-with-neon-colors.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
