--- a/css/main.css
+++ b/css/main.css
@@ -1433,7 +1433,10 @@ text-align: left;
     /* background-color: #333; */
     color: #fff;
     padding: 50px 0;
-    background-image: url("../image/images-that-simulate-x-rays-with-neon-colors.jpg");
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5), 
+        rgba(0, 0, 0, 0.5)
+    ), url("../image/images-that-simulate-x-rays-with-neon-colors.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2310,7 +2313,7 @@ color: black;
     background-image: linear-gradient(
         rgba(0, 0, 0, 0.5), 
         rgba(0, 0, 0, 0.5)
-    ), url("image/knee.jpeg");
+    ), url("../image/knee.jpeg");
     background-size: cover;
     background-position: center;
     position: relative;
